--- a/.ado/ci-pipeline.yml
+++ b/.ado/ci-pipeline.yml
@@ -12,7 +12,11 @@ resources:
       trigger:
         branches:
           include:
-            - main  # Trigger on changes to the 'main' branch
+            - main
+        paths:
+          include:
+            - src/*  # Trigger on changes to any file in the 'src' directory
+            - README.md  # Trigger on changes to the README.md file
 
 
 # Use a hosted agent with Java 17
