--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
             <goals>
               <goal>check</goal>
             </goals>
-            <phase>validate</phase>
+            <phase>none</phase>
             <configuration>
               <configLocation>src/checkstyle/nohttp-checkstyle.xml</configLocation>
               <sourceDirectories>${basedir}</sourceDirectories>
@@ -350,14 +350,7 @@
                 <?m2e execute onConfiguration,onIncremental?>
                 <phase>generate-resources</phase>
                 <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.webjars.npm</groupId>
-                      <artifactId>bootstrap</artifactId>
-                      <version>${webjars-bootstrap.version}</version>
-                    </artifactItem>
-                  </artifactItems>
-                  <outputDirectory>${project.build.directory}/webjars</outputDirectory>
+                  <skip>true</skip>
                 </configuration>
               </execution>
             </executions>
